# x86-arm-conversion

./: .arm-mcp-ai.yaml.example  .arm-mcp-ci.yaml  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/agents/: arm-migration.agent.md
.github/workflows/: arm-mcp-ci.yml
ci/: agent_runner.py  ai_analysis.py  arm_mcp_client.py  build_project.sh  detect_project.py  migrate_ease_parse.py  performix_targets.py  post_pr_comment.py  prepare_java_performix.py  prompt_loader.py  requirements.txt  run_analysis.py  suggestion_builder.py
ci/llm/: __init__.py  anthropic.py  base.py  factory.py  openai_compat.py  schema.py
code/java/: CpuBurnerOriginal.java
include/: dot_product.h
src/: dot_product.cpp  main.cpp  x86_simd.cpp
